PHASE_2/Application_SourceCode/app/src/stylesheets/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.hospital-marker {
  cursor: pointer;
}

.info-box {
    cursor: default;
    width: 60em;
    height: 35em;
    position: absolute;
    border: 1px solid gray;
    border-radius: 9px;
    background-color: #000000;
    z-index: 9999;
    opacity: 0.8;
}

.close-info-box {
    padding-top: 5px;
    padding-right: 10px;
    font-size: 14pt;
    float: right;
    color: rgb(184, 184, 184);
}

.close-info-box:hover {
    cursor: pointer;
    color: rgb(90, 90, 90);
}

.hospital-name {
  color: #eceff1;
  font-size: 18pt;
  padding-left: 40px;
  padding-right: 40px;
  text-align: center;
}

.hospital-detail {
  color: #eceff1;
  font-size: 14pt;
  padding-left: 40px;
  padding-right: 40px;
  text-align: left;
}

.menu-bar {
    position: absolute;
    /* margin-top: -20px; */
    height: 7vh;
    min-height: 47px;
    width: 100%;
    z-index: 5000;
    background-color: rgb(0, 0, 0);
    opacity: 0.6;
}

.menu-options {
  margin-top: 1%;
}

.articles-menu {
  margin-left: 5%;
  color: rgb(204, 204, 204);
  display: inline;
}

.articles-menu:hover {
  cursor: pointer;
  color: white;
}

.nsw-map-menu {
  color: rgb(204, 204, 204);
  display: inline;
  margin-left: 5%;
}

.nsw-map-menu:hover {
  cursor: pointer;
  color: white;
}

.articles {
  margin-top: 5%;
  height: 100vh;
  width: 85%;
  margin-left: auto;
  margin-right: auto;
}

/* body {
  padding: 40px 10% 20px 10%;
} */
h1 {
  padding: 20px 0;
  font-size: 2.5em;
  text-align: center;
}

.navbar {
    opacity: 0.85;
}

.search-hospital {
    z-index: 999999;
    position: absolute;
    top: 10%;
    left: 1%;
    height: 30px;
    width: 18%;
}

.search-hospital > input {
    padding: 2px;
    padding-left: 5px;
    height: 30px;
    width: 100%;
    font-size: 10pt;
    border: 1px solid grey;
    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
    opacity: 0.5;
}

.search-hospital > input:hover:not(:focus) {
    animation: fullOpacity 0.2s;
    opacity: 1;
}

.search-hospital > input:focus {
    opacity: 1;
}

.search-hospital > input:not(:focus) {
    animation: halfOpacity 0.2s;
}


.hospital-option {
    padding: 10px;
    background-color: white;
    height: 50px;
    font-size: 12pt;
    border-left: 1px solid rgb(94, 94, 94);
    border-bottom: 1px solid rgb(94, 94, 94);
    margin-bottom: 0;
    transition: background-color 0.15s, color 0.15s;
}

.hospital-option:hover {
    cursor: pointer;
    background-color: rgb(80, 80, 80);
    color: white;
    transition: background-color 0.15s, color 0.15s;
}


/*Suburb Search Bar*/
.search-suburb {
    z-index: 999999;
    position: absolute;
    top: 15%;
    left: 1%;
    height: 30px;
    width: 18%;
}

.search-suburb > input {
    padding: 2px;
    padding-left: 5px;
    height: 30px;
    width: 100%;
    font-size: 10pt;
    border: 1px solid grey;
    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
    opacity: 0.5;
}

.search-suburb > input:hover:not(:focus) {
    animation: fullOpacity 0.2s;
    opacity: 1;
}

.search-suburb > input:focus {
    opacity: 1;
}

.search-suburb > input:not(:focus) {
    animation: halfOpacity 0.2s;
}

.suburb-option {
    padding: 10px;
    background-color: white;
    height: 50px;
    font-size: 12pt;
    border-left: 1px solid rgb(94, 94, 94);
    border-bottom: 1px solid rgb(94, 94, 94);
    margin-bottom: 0;
    transition: background-color 0.15s, color 0.15s;
}

.suburb-option:hover {
    cursor: pointer;
    background-color: rgb(80, 80, 80);
    color: white;
    transition: background-color 0.15s, color 0.15s;
}



/* Animations/Transitions */
@keyframes fullOpacity {
    from { opacity: 0.5; }
    to { opacity: 1; }
}

@keyframes halfOpacity {
    from { opacity: 1; }
    to { opacity: 0.5; }
}

